fix(print): firefox issue for printing + fxLayout issue for chrome after printing

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -53,11 +53,11 @@
   align-items: center;
 }
 
-@media screen {
-  div {
-    flex-direction: row !important;
-  }
-}
+// @media screen {
+//   div {
+//     flex-direction: row !important;
+//   }
+// }
 
 @media print {
   div {
